# immich-visualizer

./: .dockerignore  README.md
immich_visualizer/: Cargo.toml  build.rs
immich_visualizer/immich_api/: Cargo.toml  README.md
immich_visualizer/immich_api/.openapi-generator/: FILES
immich_visualizer/immich_api/docs/: ActivitiesApi.md  ActivityCreateDto.md  ActivityResponseDto.md  ActivityStatisticsResponseDto.md  AddUsersDto.md  AdminOnboardingUpdateDto.md  AlbumCountResponseDto.md  AlbumResponseDto.md  AlbumUserAddDto.md  AlbumUserCreateDto.md  AlbumUserResponseDto.md  AlbumUserRole.md  AlbumsApi.md  AllJobStatusResponseDto.md  ApiKeyCreateDto.md  ApiKeyCreateResponseDto.md  ApiKeyResponseDto.md  ApiKeyUpdateDto.md  ApiKeysApi.md  AssetBulkDeleteDto.md  AssetBulkUpdateDto.md  AssetBulkUploadCheckDto.md  AssetBulkUploadCheckItem.md  AssetBulkUploadCheckResponseDto.md  AssetBulkUploadCheckResult.md  AssetDeltaSyncDto.md  AssetDeltaSyncResponseDto.md  AssetFaceResponseDto.md  AssetFaceUpdateDto.md  AssetFaceUpdateItem.md  AssetFaceWithoutPersonResponseDto.md  AssetFullSyncDto.md  AssetIdsDto.md  AssetIdsResponseDto.md  AssetJobName.md  AssetJobsDto.md  AssetMediaResponseDto.md  AssetMediaSize.md  AssetMediaStatus.md  AssetOrder.md  (+182 more)
immich_visualizer/immich_api/src/apis/: activities_api.rs  albums_api.rs  api_keys_api.rs  assets_api.rs  audit_api.rs  authentication_api.rs  configuration.rs  download_api.rs  duplicates_api.rs  faces_api.rs  file_reports_api.rs  jobs_api.rs  libraries_api.rs  map_api.rs  memories_api.rs  mod.rs  o_auth_api.rs  partners_api.rs  people_api.rs  search_api.rs  server_info_api.rs  sessions_api.rs  shared_links_api.rs  sync_api.rs  system_config_api.rs  system_metadata_api.rs  tags_api.rs  timeline_api.rs  trash_api.rs  users_admin_api.rs  users_api.rs
immich_visualizer/immich_api/src/models/: activity_create_dto.rs  activity_response_dto.rs  activity_statistics_response_dto.rs  add_users_dto.rs  admin_onboarding_update_dto.rs  album_count_response_dto.rs  album_response_dto.rs  album_user_add_dto.rs  album_user_create_dto.rs  album_user_response_dto.rs  album_user_role.rs  all_job_status_response_dto.rs  api_key_create_dto.rs  api_key_create_response_dto.rs  api_key_response_dto.rs  api_key_update_dto.rs  asset_bulk_delete_dto.rs  asset_bulk_update_dto.rs  asset_ids_dto.rs  (+178 more)
immich_visualizer/src/: heif.rs  heif_utils.rs  immich.rs  lib.rs  main.rs
immich_visualizer/tests/: immich_test.rs
immich_visualizer/ui/: OneSetting.slint  appwindow.slint
(+1 files in other folders)
