[package]
name = "immich_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
slint = "1.6.0"
openapi = { path = "./immich_api" }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
chrono = "0.4.38"
reqwest = { version ="0.12.4", features = ["blocking"] }
image = "0.25.1"
qrcode = "0.14.0"
bytes = "1.6.0"

[build-dependencies]
slint-build = "1.0"
