[package]
name = "immich_visualizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
slint = "1.6.0"
openapi = { path = "./immich_api" }
rand = "0.8.5"
chrono = "0.4.38"
reqwest = { version ="0.12.4", features = ["blocking"] }
image = "0.25.1"
bytes = "1.6.0"
executor = "0.8.4"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
libheif-rs = "1.0.2"
libheif-sys = "2.1.1"
libc = "0.2.155"

[build-dependencies]
slint-build = "1.0"

###
# WASM stuff
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = { version = "0.2" }
# getrandom = { version = "0.2.2", features = ["js"] }

###
# Turn into a library for WASM
# [lib]
# path = "src/main.rs"
# crate-type = ["cdylib"]